Bug 97575 - FILEOPEN: Can't read error bars on graph saved and reopened as xlsx
Summary: FILEOPEN: Can't read error bars on graph saved and reopened as xlsx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.0.4.2 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: filter:xls, filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2016-02-04 15:37 UTC by Milan Bouchet-Valat
Modified: 2019-03-05 07:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Test case ODS document (22.22 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-02-04 15:37 UTC, Milan Bouchet-Valat
Details
The original document in current LO 6.3 (45.26 KB, image/png)
2019-01-15 14:59 UTC, Gabor Kelemen (Collabora)
Details
The exported file in LO 6.3 and Excel 2013 (105.93 KB, image/png)
2019-01-15 15:02 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Milan Bouchet-Valat 2016-02-04 15:37:00 UTC
Created attachment 122386 [details]
Test case ODS document

After saving the attached ODS file to XLS or XLSX, and reloading it, the graph is corrupt:
- with XLS, the error bars are completely lost
- with XLSX, they are present, but invisible because their line style is set to None; also, the legend shows the year names instead of the name of the series ("Aucun")

This is with LO 5.0.4.2 on Fedora 23.
Comment 1 raal 2016-02-05 09:33:11 UTC
I can confirm with Version: 5.2.0.0.alpha0+

Is it duplicate of bug 64123?
Comment 2 Milan Bouchet-Valat 2016-02-05 09:55:16 UTC
(In reply to raal from comment #1)
> I can confirm with Version: 5.2.0.0.alpha0+
> 
> Is it duplicate of bug 64123?
No, it's different because here the ODS file is correct. Only export to XLS and XLSX breaks the graph.
Comment 3 raal 2016-02-05 10:15:54 UTC
OK, set to NEW
Comment 4 QA Administrators 2017-03-06 16:09:20 UTC Comment hidden (obsolete)
Comment 5 Milan Bouchet-Valat 2017-03-07 10:32:09 UTC
Confirmed with 5.3.0.3 (Fedora 25).
Comment 6 QA Administrators 2018-03-08 03:43:59 UTC Comment hidden (obsolete)
Comment 7 eisa01 2018-06-16 18:35:24 UTC
This is not a Filesave bug, but a file open bug.

If I export to xlsx and then open in Excel the chart renders perfectly, so it's rather LO that can't open it correctly

Version: 6.2.0.0.alpha0+
Build ID: b292a27698e85fd9d60c03613c3b0c67835c4dc1
CPU threads: 2; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-06-06_23:25:55
Locale: en-US (en_US.UTF-8); Calc: group threaded
Comment 8 Gabor Kelemen (Collabora) 2019-01-15 14:59:30 UTC
Created attachment 148332 [details]
The original document in current LO 6.3
Comment 9 Gabor Kelemen (Collabora) 2019-01-15 15:02:29 UTC
Created attachment 148334 [details]
The exported file in LO 6.3 and Excel 2013

Line properties are not read for the error bars, but export in Excel looks correct.

Version: 6.3.0.0.alpha0+
Build ID: 17dd2662ccfa9d04efbea74e5d7548db5b2126d4
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc:
Comment 10 Balázs Varga 2019-02-14 15:46:34 UTC
This is an export BUG. The MS Office is cheating. There is not any shape property (linestyle, linecolor, etc.) exported into OOXML by LibreOffice, unlike the MS Office. Probably, this patch will help: https://gerrit.libreoffice.org/#/c/67825/
Comment 11 Commit Notification 2019-02-15 06:30:53 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/b89f239aa9d3d4660380bbd0c893aecde0986032%5E%21

tdf#97575 Chart OOXML: Export ShapeProps of Error Bars

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2019-03-05 07:53:05 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/66b9f180c865d0ed57a297fe439a068f513b0fc6%5E%21

tdf#97575 Chart OOXML: Export ShapeProps of Error Bars

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.