tdf#97575 Chart OOXML: Export ShapeProps of Error Bars

Export the shapeProps (fillstyle, linestyle, linewidth,
linecolor etc.) of the Error Bars to OOXML.

Change-Id: Iff74fa463fdd0fb6ed95e4d1bf0d3e906349860c
Reviewed-on: https://gerrit.libreoffice.org/67825
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit b89f239aa9d3d4660380bbd0c893aecde0986032)
Reviewed-on: https://gerrit.libreoffice.org/67950
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>